in class practice on HTML

--- a/index.html
+++ b/index.html
@@ -6,5 +6,25 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello World!</h1>
+    <br>
+    <h2> Less importnat </h2>
+    <hr>
+    <pre>
+        Roses are Red, 
+        Violets are blue, 
+        Jade is trying his best at rhyming, 
+        and so are you. 
+    </pre>
+    <ol>
+        <li>red</li>
+        <li>blue</li>
+        <li>green</li>
+        <ul>
+            <li>Apple</li>
+            <li>Orange</li>
+            <li>banana</li>
+        </ul>
+    </ol>
     
 </body>
