added helpful note to README

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 <body>
     <section>
         <h1>John Jacob Jingleheimer Schmidt</h1>
-        <p>his name was my name too</p>
+        his name was my name too
         <hr>
         <h2>Whenever we go out</h2>
         <p>The people start to shout</p>
