added index .css and linked to index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="index.css" href="index.css">
 </head>
+     
 <body>
     <h1>Hello World!</h1>
     <br>
-    <h2> Less importnat </h2>
+    <h2> Less important </h2>
     <hr>
+    <p id="foo">Hello</p>
+    <p> World </p>
     <pre>
         Roses are Red, 
         Violets are blue, 
